--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> e-business-evi </title>
 </head>
 <body>
-<h1>site-business </h1>
-<p> site for e-business</p>
+<h1>site-e-business </h1>
+  <p> site for e-business <a href="https://githubevi.github.io/">site-e-business </a> </p>
 </body>
 </html>
